# kurou

./: .gitattributes  Cargo.toml  README.md
.claude-plugin/: marketplace.json
companion/kurou-upload/: README.md
companion/kurou-upload/.claude-plugin/: plugin.json
companion/kurou-upload/commands/: kurou-upload.md
companion/kurou-upload/scripts/: upload.sh
scripts/: build-release.sh
src/: archive.rs  auth.rs  config.rs  gateway.rs  layout.rs  ledger.rs  main.rs  mentions.rs  oauth.rs  uploads.rs
src/discord/: mod.rs
src/discord/client/: mod.rs
src/discord/types/: mod.rs
src/server/: mod.rs
src/server/tools/: archive.rs  channels.rs  common.rs  info.rs  mentions.rs  messages.rs  mod.rs  scan.rs  send.rs  users.rs
src/wall/: event.rs  mod.rs  nightwatch.html
