[package]
name = "kurou"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
rmcp = { version = "=1.6.0", features = ["transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = ["builder", "http", "model", "rustls_backend"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
