[package]
name = "kurou"
version = "0.7.1"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["form", "http1", "json", "query", "tokio"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
rmcp = { version = "=1.6.0", features = ["transport-io", "transport-streamable-http-server"] }
rusqlite = { version = "=0.37.0", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = ["builder", "client", "gateway", "http", "model", "rustls_backend"] }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
