[package]
name = "kurou"
version = "0.8.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["form", "http1", "json", "query", "tokio"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
rmcp = { version = "=1.6.0", features = ["transport-io", "transport-streamable-http-server"] }
# the ledger engine. pure-rust sqlite, async, fts on board. default-features drops mimalloc
# (a C allocator the crow's trickle-volume workload never needs); "fts" is the one we keep.
turso = { version = "0.7.0-pre.14", default-features = false, features = ["fts"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = ["builder", "client", "gateway", "http", "model", "rustls_backend"] }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
